packages/svelte/tests/validator/samples/custom-element-props-identifier-props-option/input.svelte
<svelte:options customElement={{
	props: {}
}} />

<script>
	let props = $props();
</script>