packages/svelte/tests/compiler-errors/samples/runes-export-prop/main.svelte
<script>
	let { foo } = $props();
	export { foo };
</script>
